editable = "true" for every form

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,4 +1,6 @@
 titleStart=Local Models
 titleSecond=OData Model
+titleThird=Clickable List
+titleFourth=Details
 appTitle=App Title
 appDescription=App Description
